[gd_scene load_steps=21 format=3 uid="uid://dfykohbpw0kgk"]

[ext_resource type="Script" path="res://Scenes/Battle/battle.gd" id="1_60rtf"]
[ext_resource type="Resource" uid="uid://chym5sv5wn57l" path="res://Characters/Space Combat/space_combat_character.tres" id="2_bpwqo"]
[ext_resource type="AudioStream" uid="uid://g4xj5ln47pne" path="res://Audio/ObservingTheStar.ogg" id="3_hvnxx"]
[ext_resource type="Texture2D" uid="uid://dep44umo22auj" path="res://Sprites/Ground Backgrounds/spaceship_interior.png" id="4_yu1fa"]
[ext_resource type="Script" path="res://Scenes/Battle/enemy_handler.gd" id="5_rgijo"]
[ext_resource type="PackedScene" uid="uid://hpfvbfq1itq7" path="res://Scenes/Enemy/enemy.tscn" id="6_88j06"]
[ext_resource type="Resource" uid="uid://cuhkeijg5db4s" path="res://Enemies/Ground Combat/Guard/guard_enemy.tres" id="7_bi4bc"]
[ext_resource type="PackedScene" uid="uid://cf275tnkb7cw2" path="res://Scenes/Card Target Selector/card_target_selector.tscn" id="9_ejj70"]
[ext_resource type="Script" path="res://Scenes/Player/player_handler.gd" id="10_p0mga"]
[ext_resource type="Resource" uid="uid://dxr1jx80b6e2o" path="res://Characters/Ground Combat/ground_combat_player_character.tres" id="11_7p816"]
[ext_resource type="PackedScene" uid="uid://38ev2dayttmj" path="res://Scenes/Player/player.tscn" id="11_w068i"]
[ext_resource type="Script" path="res://Scenes/UI/battle_ui.gd" id="12_xi7l5"]
[ext_resource type="Script" path="res://Scenes/UI/hand.gd" id="13_w8ru5"]
[ext_resource type="PackedScene" uid="uid://cf3sitpxvwk4k" path="res://Scenes/UI/tooltip.tscn" id="14_wbevq"]
[ext_resource type="PackedScene" uid="uid://bwddjlw4mftkg" path="res://Scenes/Card UI/energy_ui.tscn" id="15_sig4d"]
[ext_resource type="Theme" uid="uid://f2d0gj7br2yh" path="res://main_theme.tres" id="16_fy7vm"]
[ext_resource type="FontFile" uid="uid://cad427yuixp3b" path="res://Fonts/m5x7.ttf" id="17_65sgm"]
[ext_resource type="Script" path="res://Scenes/UI/red_flash.gd" id="18_2ucb3"]
[ext_resource type="PackedScene" uid="uid://bwxrwr0iixvex" path="res://Scenes/UI/battle_over_panel.tscn" id="19_ivul6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8772h"]
size = Vector2(512, 200)

[node name="GroundBattle" type="Node2D"]
script = ExtResource("1_60rtf")
char_stats = ExtResource("11_7p816")
music = ExtResource("3_hvnxx")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-95, -58)
scale = Vector2(0.485835, 0.4489)
texture = ExtResource("4_yu1fa")
centered = false

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(256, 100)
shape = SubResource("RectangleShape2D_8772h")
debug_color = Color(0, 0.6, 0.701961, 0.227451)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("5_rgijo")

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("6_88j06")]
position = Vector2(389, 205)
stats = ExtResource("7_bi4bc")

[node name="CardTargetSelector" parent="." instance=ExtResource("9_ejj70")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("10_p0mga")
hand = NodePath("../BattleUI/Hand")

[node name="Player" parent="." instance=ExtResource("11_w068i")]
position = Vector2(140, 201)
stats = ExtResource("11_7p816")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("12_xi7l5")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("13_w8ru5")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("14_wbevq")]
offset_top = 3.0
offset_bottom = 54.0

[node name="EnergyUI" parent="BattleUI" instance=ExtResource("15_sig4d")]
offset_left = 4.0
offset_top = -24.0
offset_right = 22.0
offset_bottom = -6.0
char_stats = ExtResource("2_bpwqo")

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -20.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("16_fy7vm")
theme_override_fonts/font = ExtResource("17_65sgm")
text = "End Turn"

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
visible = false
script = ExtResource("18_2ucb3")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.678431, 0.0784314, 0, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("19_ivul6")]
visible = false
